# Operit

./: .gitignore  .gitmodules  AGENTS.md  README(E).md  README.md  check_strings.py  local.properties.example  settings.gradle.kts
app/: build.gradle.kts
app/objectbox-models/: default.json.bak
app/src/main/: AndroidManifest.xml
app/src/main/assets/: code_runner.js
app/src/main/assets/bridge/: index.d.ts  index.js  index.js.map  spawn-helper.js  spawn-helper.js.map
app/src/main/java/com/ai/assistance/operit/util/: AnrMonitor.kt  (+9 more)
app/src/main/res/values/: strings.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-es/: strings.xml
bridge/: index.ts  spawn-helper.ts  tsconfig.json
docs/: BUILDING.md  CONTRIBUTING.md  SCRIPT_DEV_GUIDE.md
docs/package_dev/: files.md  index.md  query.md
examples/: automatic_bilibili_assistant.ts  automatic_ui_base.ts  bilibili_tools.js  bilibili_tools.ts  code_runner.js  code_runner.ts  daily_life.js  daily_life.ts  douyin_download.js  douyin_download.ts  file_converter.js  file_converter.ts  google_search.js  google_search.ts  quick_start.js  super_admin.js  super_admin.ts  system_tools.js  system_tools.ts  tasker.js  tasker.ts  various_search.js  various_search.ts  workflow.js  workflow.ts
examples/types/: files.d.ts  index.d.ts  network.d.ts  query.d.ts  results.d.ts  system.d.ts  tasker.d.ts  tool-types.d.ts  ui.d.ts
gradle/: libs.versions.toml
mnn/: CMakeLists.txt  build.gradle.kts
mnn/src/main/cpp/: mnnllmnative.cpp
mnn/src/main/java/com/ai/assistance/mnn/: MNNLlmNative.kt  MNNLlmSession.kt
(+285 files in other folders)
